--- a/About.html
+++ b/About.html
@@ -34,17 +34,23 @@
 	</nav>
 </header>
 
-<main>
+<main class="contacto">
 	<article>
-		<h1>Contactanos</h1>
-		<button value="Enviar"></button>
+		<h1>Contactanos !</h1>
+		<form action="/" class="decor">
+			<div class="form-inner">
+			<input type="text" placeholder="Nombre">
+			<input type="email" placeholder="Correo">
+			<textarea placeholder="Cuentanos que tienes para decir!" rows="5"></textarea>
+			<button type="submit" href="/">Submit</button>
+			</div>
+		</form>
 	</article>
 </main>
 
 <footer>
 	<p> Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
-
 </footer>
 </body>
 </html>
