--- a/Reviews.html
+++ b/Reviews.html
@@ -35,7 +35,20 @@
 </header>
 
 <main>
-
+	<article class="reviews">
+		<section>
+			<q>En cada capítulo, se explora una visión filosófica o ética de la vida ¿qué es ser bueno? ¿Si ayudas a alguien para ayudarte a ti, eso es algo bueno o no? ¿Cuál es LA respuesta? Hasta el dilema del tren hace presencia. The Good Place busca no solo entregar un mensaje relativamente básico y amplio como las demás sitcoms, sino que realmente busca hacerte reflexionar sobre tu vida y tus perspectivas de la misma. ¿Si un ser inmortal se equivoca, realmente importa?</q>
+			<a href="https://comiqueros.cl/the-good-place-sin-spoilers/">Comiqueros</a>
+		</section>
+		<section>
+			<q>Si algo hace mágica esta serie, además del movimiento constante de la trama, son sus personajes. Verte identificado en la simpleza y a su vez la picaresca de la protagonista y de aquellas personas que le rodean crean un vínculo con la serie que vale la pena disfrutar.</q>
+			<a href="https://sextabutaca.com/critica-the-good-place-sin-spoilers/"> Sexta Butaca</a>
+		</section>
+		<section>
+			<q>Sin importar sus imperfecciones, “The good place” tenía un mensaje increíble y transformador sobre lo que significa estar aquí en la tierra” (traducido del inglés)</q>
+			<a href="https://www.insider.com/the-good-place-finale-series-changed-my-life-2020-1">Insider</a>
+		</section>
+	</article>
 </main>
 
 <footer>
