--- a/Personajes.html
+++ b/Personajes.html
@@ -37,7 +37,8 @@
 
 
 <main>
-	<section class="redireccion_char">
+	<a href="#top" class="upbutton"></a>
+	<section class="redireccion_char" id="top">
 		<div>
 			<a href="#Eleanor"> 
 				<img src="images/eleanor_p.jpg" alt = "Portarretrato de Eleanor">
