--- a/Backstage.html
+++ b/Backstage.html
@@ -24,10 +24,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
-			<li class="current">Detras de escena
+			<li class="current">Detrás de escena
 				<ul class="dropdown">
 					<li class="current">Equipo</li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -37,19 +37,19 @@
 
 <main>
 	<section class="info">
-		<p>La serie fue creada por Michael Schur, un productor y guionista estadounidense. Schur es conocido principalmente por su participacion en <span>The Office</span> y <span>Parks and Recreations</span> asi como tambien ser el creador de <span>Brooklyn 99</span></p>
-		<img src="images/schur.jpg" alt="Michael Schur">
+		<img src="images/promoimage.jpg" alt="Poster de la series">
+		<p><span>The Good Place</span> se estrenó el 19 de septiembre de 2016 y finalizó el 30 de enero de 2020. 
+			Fue transmitida por la cadena NBC, aunque en varias regiones entre las cuales se incluye Argentina, la serie se distribuyó mediante la plataforma de streaming <span>Netflix</span>.
+		</p>
 	</section>
 	<section class="info">
-		<img src="images/promoimage.jpg" alt="Poster de la series">
-		<p><span>The Good Place</span> se estrenó el 19 de septiembre de 2016 y finalizo el 30 de enero de 2020. 
-			Fue transmitida por la cadena NBC, aunque en varias regiones entre las cuales se incluye Argentina, la serie se distribuyo mediante la plataforma de streaming <span>Netflix</span>.
-		</p>
+		<p>La serie fue creada por Michael Schur, un productor y guionista estadounidense. Schur es conocido principalmente por su participacion en <span>The Office</span> y <span>Parks and Recreations</span> así como también ser el creador de <span>Brooklyn 99</span></p>
+		<img src="images/schur.jpg" alt="Michael Schur">
 	</section>
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 </body>
