--- a/Index.html
+++ b/Index.html
@@ -23,10 +23,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
-			<li><a href="Backstage.html">Detras de escena</a>
+			<li><a href="Backstage.html">Detrás de escena</a>
 				<ul class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -34,13 +34,13 @@
 	</nav>
 </header>
 
-<main>
-	<h1 class="welcometext">-Bienvenido al Buen Lugar, donde todo es perfecto-</h1>
-	<p class="welcome">Que hay despues de la muerte? Una pregunta que la humanidad se viene haciendo desde sus comienzos. <span>The Good Place</span> nos brinda una mirada unica del mas alla, acompaña a Eleanor y Michael en esta aventura fantastica llena de comedia y sorpresas.</p>
+<main class="welcome">
+	<h1>-Bienvenido al Buen Lugar, donde todo es perfecto-</h1>
+	<p>Qué hay después de la muerte? Una pregunta que la humanidad se viene haciendo desde sus comienzos. <span>The Good Place</span> nos brinda una mirada única del más allá, acompaña a Eleanor y Michael en esta aventura fantástica llena de comedia y sorpresas.</p>
 
 	
 	<article class="redireccion_pages">
-		<h2>Descubre mas sobre la serie</h2>
+		<h2>Descubre más sobre la serie</h2>
 		<section>
 			<div>
 				<a href="Personajes.html"> 
@@ -57,7 +57,7 @@
 			<div>
 				<a href="Media.html"> 
 					<img src="images/media.jpg" alt = "redireccion a la galeria de imagenes">
-					<h4>Galeria</h4>
+					<h4>Galería</h4>
 				</a>
 			</div>
 		</section>
@@ -65,7 +65,7 @@
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 
