--- a/Reviews.html
+++ b/Reviews.html
@@ -23,10 +23,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
-			<li class="current">Detras de escena
+			<li class="current">Detrás de escena
 				<ul class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li class="current">Recepcion</li>
+					<li class="current">Recepción</li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -45,14 +45,14 @@
 			<a href="https://sextabutaca.com/critica-the-good-place-sin-spoilers/"> Sexta Butaca</a>
 		</section>
 		<section>
-			<q>Sin importar sus imperfecciones, “The good place” tenía un mensaje increíble y transformador sobre lo que significa estar aquí en la tierra” (traducido del inglés)</q>
+			<q>Sin importar sus imperfecciones, “The good place” tuvo un mensaje increíble y transformador sobre lo que significa estar aquí en la tierra” (traducido del inglés)</q>
 			<a href="https://www.insider.com/the-good-place-finale-series-changed-my-life-2020-1">Insider</a>
 		</section>
 	</article>
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 </body>
