--- a/About.html
+++ b/About.html
@@ -23,10 +23,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
-			<li><a href="Backstage.html">Detras de escena</a>
+			<li><a href="Backstage.html">Detrás de escena</a>
 				<ul class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li class="current">Sobre el sitio</li>
@@ -35,21 +35,23 @@
 </header>
 
 <main class="contacto">
-	<article>
-		<h1>Contactanos !</h1>
-		<form action="/" class="decor">
-			<div class="form-inner">
-			<input type="text" placeholder="Nombre">
-			<input type="email" placeholder="Correo">
-			<textarea placeholder="Cuentanos que tienes para decir!" rows="5"></textarea>
-			<button type="submit" href="/">Submit</button>
-			</div>
-		</form>
-	</article>
+	<section>
+		<article>
+			<h1>Contáctanos !</h1>
+			<form action="/" class="decor">
+				<div class="form-inner">
+				<input type="text" placeholder="Nombre">
+				<input type="email" placeholder="Correo">
+				<textarea placeholder="Cuentanos que tienes para decir !" rows="5"></textarea>
+				<button type="submit" href="/">Enviar</button>
+				</div>
+			</form>
+		</article>
+	</section>
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 </body>
