--- a/Media.html
+++ b/Media.html
@@ -25,10 +25,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li class="current">Media</li>
-			<li><a href="Backstage.html">Detras de escena</a>
+			<li><a href="Backstage.html">Detrás de escena</a>
 				<ul class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -74,7 +74,7 @@
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 <script src="js/lightbox-plus-jquery.min.js"></script>
