--- a/Personajes.html
+++ b/Personajes.html
@@ -24,10 +24,10 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li class="current">Personajes</li>
 			<li><a href="Media.html">Media</a></li>
-			<li><a href="Backstage.html">Detras de escena</a>
+			<li><a href="Backstage.html">Detrás de escena</a>
 				<ul  class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -37,7 +37,7 @@
 
 
 <main>
-	<a href="#top" class="upbutton"></a>
+	<a href="#top" class="upbutton"><div></div></a>
 	<section class="redireccion_char" id="top">
 		<div>
 			<a href="#Eleanor"> 
@@ -126,7 +126,7 @@
 
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 </body>
