--- a/Serie.html
+++ b/Serie.html
@@ -22,10 +22,10 @@
 			<li class="current">Acerca de la serie</li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
-			<li><a href="Backstage.html">Detras de escena</a>
+			<li><a href="Backstage.html">Detrás de escena</a>
 				<ul  class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
-					<li><a href="Reviews.html">Recepcion</a></li>
+					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
 			<li><a href="About.html">Sobre el sitio</a></li>
@@ -42,7 +42,7 @@
 </main>
 
 <footer>
-	<p> Legal</p>
+	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 </body>
