--- a/Media.html
+++ b/Media.html
@@ -36,40 +36,39 @@
 	</nav>
 </header>
 
-<main>
-	<section>
-		<div>
-			<a class="galeryimg" href="images/beginning.jpg" data-lightbox="gallery" data-title="Eleanor despierta en la oficina de Michael"><img class="thumbnail" src="images/beggining_t.jpg" alt="Eleanor despierta en la oficina de Michael"/></a>
-			<a class="galeryimg" href="images/introduction.jpg" data-lightbox="gallery" data-title="Michael invita a Eleanor a su oficina"><img class="thumbnail" src="images/introduction_t.jpg" alt="Michael invita a Eleanor a su oficina"/></a>
-			<a class="galeryimg" href="images/talk.jpg" data-lightbox="gallery" data-title="Conversacion en la oficina"><img class="thumbnail" src="images/talk_t.jpg" alt="Conversacion en la oficina entre Michael y Eleanor"/></a>
-			<a class="galeryimg" href="images/office.jpg" data-lightbox="gallery" data-title="Michael señalando un cuadro"><img class="thumbnail" src="images/office_t.jpg" alt="Michael señalando un cuadro"/></a>
-			<a class="galeryimg" href="images/neighbourhood.jpg" data-lightbox="gallery" data-title="Michael le muestra el vecindario a Eleanor"><img class="thumbnail" src="images/neighbourhood_t.jpg" alt="Michael le muestra el vecindario a Eleanor"/></a>
-			<a class="galeryimg" href="images/building.jpg" data-lightbox="gallery" data-title="Edificio del vecindario"><img class="thumbnail" src="images/building_t.jpg" alt="Un edificio del vecindario"/></a>
-			<a class="galeryimg" href="images/Eleanor_house.jpg" data-lightbox="gallery" data-title="La casa de Eleanor"><img class="thumbnail" src="images/Eleanor_house_t.jpg" alt="Michael le muestra a Eleanor su nueva a casa"/></a>
-			<a class="galeryimg" href="images/mansion.jpg" data-lightbox="gallery" data-title="La mansion de Tahani"><img class="thumbnail" src="images/mansion_t.jpg" alt="La mansion de Tahani al lado de la casa de Eleanor"/></a>
-			<a class="galeryimg" href="images/people.jpg" data-lightbox="gallery" data-title="Los habitantes del vecindario reunidos"><img class="thumbnail" src="images/people_t.jpg" alt="Los habitantes del vecindario reunidos"/></a>
-			<a class="galeryimg" href="images/presentation.jpg" data-lightbox="gallery" data-title="Presentacion de bienvenida al buen lugar"><img class="thumbnail" src="images/presentation_t.jpg" alt="Presentacion de bienvenida al buen lugar"/></a>
-			<a class="galeryimg" href="images/presentation(1).jpg" data-lightbox="gallery" data-title="Presentacion de bienvenida al buen lugar"><img class="thumbnail" src="images/presentation(1)_t.jpg" alt="Presentacion de bienvenida al buen lugar"/></a>
-			<a class="galeryimg" href="images/points.jpg" data-lightbox="gallery" data-title="El sistema de puntos"><img class="thumbnail" src="images/points_t.jpg" alt="Michael explicando el sistema de puntos"/></a>
-			<a class="galeryimg" href="images/memories.jpg" data-lightbox="gallery" data-title="Los personajes viendo las memorias de Eleanor"><img class="thumbnail" src="images/memories_t.jpg" alt="Los personajes viendo las memorias de Eleanor"/></a>
-			<a class="galeryimg" href="images/clowns.jpg" data-lightbox="gallery" data-title="Cuadros de payaso en la casa de Eleanor"><img class="thumbnail" src="images/clowns_t.jpg" alt="Cuadros de payaso en la casa de Eleanor"/></a>
-			<a class="galeryimg" href="images/meeting.jpg" data-lightbox="gallery" data-title="Michael presentando a Chidi y Eleanor"><img class="thumbnail" src="images/meeting_t.jpg" alt="Michael presentando a Chidi y Eleanor"/></a>
-			<a class="galeryimg" href="images/alive.jpg" data-lightbox="gallery" data-title="Eleanor en su trabajo cuando estaba viva"><img class="thumbnail" src="images/alive_t.jpg" alt="Eleanor en su trabajo cuando estaba viva"/></a>
-			<a class="galeryimg" href="images/yogurt.jpg" data-lightbox="gallery" data-title="Eleanor y Chidi en el local de yogurt"><img class="thumbnail" src="images/yogurt_t.jpg" alt="Eleanor y Chidi sentados en el local de yogurt"/></a>
-			<a class="galeryimg" href="images/janetmeet.jpg" data-lightbox="gallery" data-title="Janet junto a Eleanor y Chidi en el local de yogurt"><img class="thumbnail" src="images/janetmeet_t.jpg" alt="Janet junto a Eleanor y Chidi en el local de yogurt"/></a>
-			<a class="galeryimg" href="images/class.jpg" data-lightbox="gallery" data-title="Chidi dandole a Eleanor clases de etica"><img class="thumbnail" src="images/class_t.jpg" alt="Chidi dandole a Eleanor clases de etica"/></a>
-			<a class="galeryimg" href="images/park.jpg" data-lightbox="gallery" data-title="Michael y Eleanor caminando por el parque"><img class="thumbnail" src="images/park_t.jpg" alt="Michael y Eleanor caminando por el parque"/></a>
-			<a class="galeryimg" href="images/park(1).jpg" data-lightbox="gallery" data-title="Michael y Eleanor caminando por el parque"><img class="thumbnail" src="images/park(1)_t.jpg" alt="Michael y Eleanor caminando por el parque"/></a>
-			<a class="galeryimg" href="images/fountain.jpg" data-lightbox="gallery" data-title="Fuente frente a una de las mansiones"><img class="thumbnail" src="images/fountain_t.jpg" alt="Fuente frente a una de las mansiones"/></a>
-			<a class="galeryimg" href="images/party.jpg" data-lightbox="gallery" data-title="Eleanor y Chidi entrando a la fiesta de Tahani"><img class="thumbnail" src="images/party_t.jpg" alt="Eleanor y Chidi entrando a la fiesta de Tahani"/></a>
-			<a class="galeryimg" href="images/party(1).jpg" data-lightbox="gallery" data-title="Eleanor y Chidi entrando a la fiesta de Tahani"><img class="thumbnail" src="images/party(1)_t.jpg" alt="Eleanor y Chidi entrando a la fiesta de Tahani"/></a>
-			<a class="galeryimg" href="images/party(2).jpg" data-lightbox="gallery" data-title="Tahani y Jason en la fiesta"><img class="thumbnail" src="images/party(2)_t.jpg" alt="Tahani y Jason en la fiesta"/></a>
-			<a class="galeryimg" href="images/party(3).jpg" data-lightbox="gallery" data-title="Michael dando un discurso en la fiesta"><img class="thumbnail" src="images/party(3)_t.jpg" alt="Michael dando un discurso en la fiesta"/></a>
-			<a class="galeryimg" href="images/view.jpg" data-lightbox="gallery" data-title="Chidi, Janet y Michael viendo el buen lugar desde lejos"><img class="thumbnail" src="images/view_t.jpg" alt="Chidi, Janet y Michael viendo el buen lugar desde lejos"/></a>
-			<a class="galeryimg" href="images/cast.jpg" data-lightbox="gallery" data-title="De izquierda a derecha: ELeanor, Janet, Jason, Tahani y Michael"><img class="thumbnail" src="images/cast_t.jpg" alt="De izquierda a derecha: ELeanor, Janet, Jason, Tahani y Michael"/></a>
-			<a class="galeryimg" href="images/humans.jpg" data-lightbox="gallery" data-title="Los cuatro humanos principales y Janet detras de ellos"><img class="thumbnail" src="images/humans_t.jpg" alt="Los cuatro humanos principales y Janet detras de ellos"/></a>
-
-		</div>
+<main class="galeria">
+	<section class="trailer">
+		<iframe src="https://www.youtube.com/embed/9QxRbzFk3zk" title="THE GOOD PLACE Trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	</section>
+	<section class="gallery">
+		<a class="galeryimg" href="images/beginning.jpg" data-lightbox="gallery" data-title="Eleanor despierta en la oficina de Michael"><img class="thumbnail" src="images/beggining_t.jpg" alt="Eleanor despierta en la oficina de Michael"/></a>
+		<a class="galeryimg" href="images/introduction.jpg" data-lightbox="gallery" data-title="Michael invita a Eleanor a su oficina"><img class="thumbnail" src="images/introduction_t.jpg" alt="Michael invita a Eleanor a su oficina"/></a>
+		<a class="galeryimg" href="images/talk.jpg" data-lightbox="gallery" data-title="Conversacion en la oficina"><img class="thumbnail" src="images/talk_t.jpg" alt="Conversacion en la oficina entre Michael y Eleanor"/></a>
+		<a class="galeryimg" href="images/office.jpg" data-lightbox="gallery" data-title="Michael señalando un cuadro"><img class="thumbnail" src="images/office_t.jpg" alt="Michael señalando un cuadro"/></a>
+		<a class="galeryimg" href="images/neighbourhood.jpg" data-lightbox="gallery" data-title="Michael le muestra el vecindario a Eleanor"><img class="thumbnail" src="images/neighbourhood_t.jpg" alt="Michael le muestra el vecindario a Eleanor"/></a>
+		<a class="galeryimg" href="images/building.jpg" data-lightbox="gallery" data-title="Edificio del vecindario"><img class="thumbnail" src="images/building_t.jpg" alt="Un edificio del vecindario"/></a>
+		<a class="galeryimg" href="images/Eleanor_house.jpg" data-lightbox="gallery" data-title="La casa de Eleanor"><img class="thumbnail" src="images/Eleanor_house_t.jpg" alt="Michael le muestra a Eleanor su nueva a casa"/></a>			<a class="galeryimg" href="images/mansion.jpg" data-lightbox="gallery" data-title="La mansion de Tahani"><img class="thumbnail" src="images/mansion_t.jpg" alt="La mansion de Tahani al lado de la casa de Eleanor"/></a>
+		<a class="galeryimg" href="images/people.jpg" data-lightbox="gallery" data-title="Los habitantes del vecindario reunidos"><img class="thumbnail" src="images/people_t.jpg" alt="Los habitantes del vecindario reunidos"/></a>
+		<a class="galeryimg" href="images/presentation.jpg" data-lightbox="gallery" data-title="Presentacion de bienvenida al buen lugar"><img class="thumbnail" src="images/presentation_t.jpg" alt="Presentacion de bienvenida al buen lugar"/></a>
+		<a class="galeryimg" href="images/presentation(1).jpg" data-lightbox="gallery" data-title="Presentacion de bienvenida al buen lugar"><img class="thumbnail" src="images/presentation(1)_t.jpg" alt="Presentacion de bienvenida al buen lugar"/></a>
+		<a class="galeryimg" href="images/points.jpg" data-lightbox="gallery" data-title="El sistema de puntos"><img class="thumbnail" src="images/points_t.jpg" alt="Michael explicando el sistema de puntos"/></a>
+		<a class="galeryimg" href="images/memories.jpg" data-lightbox="gallery" data-title="Los personajes viendo las memorias de Eleanor"><img class="thumbnail" src="images/memories_t.jpg" alt="Los personajes viendo las memorias de Eleanor"/></a>
+		<a class="galeryimg" href="images/clowns.jpg" data-lightbox="gallery" data-title="Cuadros de payaso en la casa de Eleanor"><img class="thumbnail" src="images/clowns_t.jpg" alt="Cuadros de payaso en la casa de Eleanor"/></a>
+		<a class="galeryimg" href="images/meeting.jpg" data-lightbox="gallery" data-title="Michael presentando a Chidi y Eleanor"><img class="thumbnail" src="images/meeting_t.jpg" alt="Michael presentando a Chidi y Eleanor"/></a>
+		<a class="galeryimg" href="images/alive.jpg" data-lightbox="gallery" data-title="Eleanor en su trabajo cuando estaba viva"><img class="thumbnail" src="images/alive_t.jpg" alt="Eleanor en su trabajo cuando estaba viva"/></a>
+		<a class="galeryimg" href="images/yogurt.jpg" data-lightbox="gallery" data-title="Eleanor y Chidi en el local de yogurt"><img class="thumbnail" src="images/yogurt_t.jpg" alt="Eleanor y Chidi sentados en el local de yogurt"/></a>
+		<a class="galeryimg" href="images/janetmeet.jpg" data-lightbox="gallery" data-title="Janet junto a Eleanor y Chidi en el local de yogurt"><img class="thumbnail" src="images/janetmeet_t.jpg" alt="Janet junto a Eleanor y Chidi en el local de yogurt"/></a>
+		<a class="galeryimg" href="images/class.jpg" data-lightbox="gallery" data-title="Chidi dandole a Eleanor clases de etica"><img class="thumbnail" src="images/class_t.jpg" alt="Chidi dandole a Eleanor clases de etica"/></a>
+		<a class="galeryimg" href="images/park.jpg" data-lightbox="gallery" data-title="Michael y Eleanor caminando por el parque"><img class="thumbnail" src="images/park_t.jpg" alt="Michael y Eleanor caminando por el parque"/></a>
+		<a class="galeryimg" href="images/park(1).jpg" data-lightbox="gallery" data-title="Michael y Eleanor caminando por el parque"><img class="thumbnail" src="images/park(1)_t.jpg" alt="Michael y Eleanor caminando por el parque"/></a>
+		<a class="galeryimg" href="images/fountain.jpg" data-lightbox="gallery" data-title="Fuente frente a una de las mansiones"><img class="thumbnail" src="images/fountain_t.jpg" alt="Fuente frente a una de las mansiones"/></a>
+		<a class="galeryimg" href="images/party.jpg" data-lightbox="gallery" data-title="Eleanor y Chidi entrando a la fiesta de Tahani"><img class="thumbnail" src="images/party_t.jpg" alt="Eleanor y Chidi entrando a la fiesta de Tahani"/></a>
+		<a class="galeryimg" href="images/party(1).jpg" data-lightbox="gallery" data-title="Eleanor y Chidi entrando a la fiesta de Tahani"><img class="thumbnail" src="images/party(1)_t.jpg" alt="Eleanor y Chidi entrando a la fiesta de Tahani"/></a>
+		<a class="galeryimg" href="images/party(2).jpg" data-lightbox="gallery" data-title="Tahani y Jason en la fiesta"><img class="thumbnail" src="images/party(2)_t.jpg" alt="Tahani y Jason en la fiesta"/></a>
+		<a class="galeryimg" href="images/party(3).jpg" data-lightbox="gallery" data-title="Michael dando un discurso en la fiesta"><img class="thumbnail" src="images/party(3)_t.jpg" alt="Michael dando un discurso en la fiesta"/></a>
+		<a class="galeryimg" href="images/view.jpg" data-lightbox="gallery" data-title="Chidi, Janet y Michael viendo el buen lugar desde lejos"><img class="thumbnail" src="images/view_t.jpg" alt="Chidi, Janet y Michael viendo el buen lugar desde lejos"/></a>
+		<a class="galeryimg" href="images/cast.jpg" data-lightbox="gallery" data-title="De izquierda a derecha: ELeanor, Janet, Jason, Tahani y Michael"><img class="thumbnail" src="images/cast_t.jpg" alt="De izquierda a derecha: ELeanor, Janet, Jason, Tahani y Michael"/></a>
+		<a class="galeryimg" href="images/humans.jpg" data-lightbox="gallery" data-title="Los cuatro humanos principales y Janet detras de ellos"><img class="thumbnail" src="images/humans_t.jpg" alt="Los cuatro humanos principales y Janet detras de ellos"/></a>
 	</section>
 </main>
 
