--- a/Backstage.html
+++ b/Backstage.html
@@ -30,7 +30,7 @@
 					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li><a href="About.html">Sobre el sitio</a></li>
+			<li><a href="About.html">Contacto</a></li>
 		</ul>
 	</nav>
 </header>
@@ -39,11 +39,11 @@
 	<section class="info">
 		<img src="images/promoimage.jpg" alt="Poster de la series">
 		<p><span>The Good Place</span> se estrenó el 19 de septiembre de 2016 y finalizó el 30 de enero de 2020. 
-			Fue transmitida por la cadena NBC, aunque en varias regiones entre las cuales se incluye Argentina, la serie se distribuyó mediante la plataforma de streaming <span>Netflix</span>.
+			Fue transmitida por la cadena NBC, aunque en varias regiones entre las cuales se incluye Argentina, la serie se distribuyó mediante la plataforma de streaming <span>Netflix</span>. Con 4 temporadas y un total de 53 episodios la serie se destacó por su originalidad, actuacion y su uso de temas tanto éticos como filosóficos.
 		</p>
 	</section>
 	<section class="info">
-		<p>La serie fue creada por Michael Schur, un productor y guionista estadounidense. Schur es conocido principalmente por su participacion en <span>The Office</span> y <span>Parks and Recreations</span> así como también ser el creador de <span>Brooklyn 99</span></p>
+		<p>La serie fue creada por Michael Schur, un productor y guionista estadounidense, ganador de dos Premios Primetime Emmy por su trabajo en <span>Saturday Night Live</span>. Schur es conocido principalmente por su participacion en <span>The Office</span> y <span>Parks and Recreations</span> así como también ser el creador de <span>Brooklyn 99</span>.</p>
 		<img src="images/schur.jpg" alt="Michael Schur">
 	</section>
 </main>
