--- a/Media.html
+++ b/Media.html
@@ -31,15 +31,17 @@
 					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li><a href="About.html">Sobre el sitio</a></li>
+			<li><a href="About.html">Contacto</a></li>
 		</ul>
 	</nav>
 </header>
 
 <main class="galeria">
+	<h1>Mira el trailer !</h1>
 	<section class="trailer">
 		<iframe src="https://www.youtube.com/embed/9QxRbzFk3zk" title="THE GOOD PLACE Trailer" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</section>
+	<h2>Galería</h2>
 	<section class="gallery">
 		<a class="galeryimg" href="images/beginning.jpg" data-lightbox="gallery" data-title="Eleanor despierta en la oficina de Michael"><img class="thumbnail" src="images/beggining_t.jpg" alt="Eleanor despierta en la oficina de Michael"/></a>
 		<a class="galeryimg" href="images/introduction.jpg" data-lightbox="gallery" data-title="Michael invita a Eleanor a su oficina"><img class="thumbnail" src="images/introduction_t.jpg" alt="Michael invita a Eleanor a su oficina"/></a>
