--- a/Personajes.html
+++ b/Personajes.html
@@ -30,7 +30,7 @@
 					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li><a href="About.html">Sobre el sitio</a></li>
+			<li><a href="About.html">Contacto</a></li>
 		</ul>
 	</nav>
 </header>
