--- a/Reviews.html
+++ b/Reviews.html
@@ -29,7 +29,7 @@
 					<li class="current">Recepción</li>
 				</ul>
 			</li>
-			<li><a href="About.html">Sobre el sitio</a></li>
+			<li><a href="About.html">Contacto</a></li>
 		</ul>
 	</nav>
 </header>
