--- a/Serie.html
+++ b/Serie.html
@@ -28,17 +28,16 @@
 					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li><a href="About.html">Sobre el sitio</a></li>
+			<li><a href="About.html">Contacto</a></li>
 		</ul>
 	</nav>
 </header>
 
 <main>
-	<div class="sinopsis">
-		<article>
-			<p> La serie se centra en la vida en el más allá de Eleanor Shellstroop, una mujer que equivocadamente termino en “El Buen Lugar”, un lugar similar al Cielo, diseñado a la perfección para sus habitantes en la forma de un vecindario, dicho lugar es donde van las personas que fueron muy buenas en vida, ella, al notar que Michael, una especie de ángel que fue el encargado de diseñar una vida perfecta para ella en más allá, la equivoco con otra mujer con el mismo nombre, entonces, Eleanor trata de encontrar la manera de que no descubran quien era en realidad y así evitar que la envíen a El mal lugar. Con la ayuda de Chidi, su supesta alma gemela, Eleanor trata de aprender como ser mejor persona y poder quedarse en el paraiso.</p>
-		</article>
-	</div>
+	<article class="sinopsis">
+		<p> La serie se centra en la vida en el más allá de Eleanor Shellstroop, una mujer que equivocadamente termino en “El Buen Lugar”, un lugar similar al Cielo, diseñado a la perfección para sus habitantes en la forma de un vecindario, dicho lugar es donde van las personas que fueron muy buenas en vida, ella, al notar que Michael, una especie de ángel que fue el encargado de diseñar una vida perfecta para ella en más allá, la equivoco con otra mujer con el mismo nombre, entonces, Eleanor trata de encontrar la manera de que no descubran quien era en realidad y así evitar que la envíen a El mal lugar. Con la ayuda de Chidi, su supesta alma gemela, Eleanor trata de aprender como ser mejor persona y poder quedarse en el paraiso.</p>
+		<img src="images/banner.jpg" alt="Eleanor y Michael">
+	</article>
 </main>
 
 <footer>
