--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
 					<li><a href="Reviews.html">Recepción</a></li>
 				</ul>
 			</li>
-			<li class="current">Sobre el sitio</li>
+			<li class="current">Contacto</li>
 		</ul>
 	</nav>
 </header>
