--- a/Reviews.html
+++ b/Reviews.html
@@ -36,7 +36,16 @@
 
 <main>
 	<article class="awards">
-		
+		<h1>Premios y nominaciones</h1>	
+		<section>
+			<p><span>Premios AFI(American Film Institute)</span> : Mejores programas de televisión del año (2017)</p>
+			<p><span>Critics' Choice Television Awards</span> : Serie nueva más emocionante(2016) y Mejor actor de reparto-Comedia(2018-Ted Danson)</p>
+			<p><span> Premios Hugo</span> : Mejor representación dramática (años 2018 a 2021)</p>
+			<p><span>Premios Peabody</span> : Homenajeado de entretenimiento(2019)</p>
+			<p><span>People's Choice Awards</span> : Estrella de televisión de comedia del año(2019-Kristen Bell)</p>
+			<p><span>Premios TCA(Television Critics Association)</span> : Logro excepcional en comedia(2018)</p>
+			<p>Nominada a 14 <span>Premios Primetime Emmy </span> y 2 <span>Globos de oro</span></p>
+		</section>
 	</article>
 	<article class="reviews">
 		<section>
@@ -48,7 +57,7 @@
 			<a href="https://sextabutaca.com/critica-the-good-place-sin-spoilers/"> Sexta Butaca</a>
 		</section>
 		<section>
-			<q>Sin importar sus imperfecciones, “The good place” tuvo un mensaje increíble y transformador sobre lo que significa estar aquí en la tierra.(traducido del inglés)</q>
+			<q>Sin importar sus imperfecciones, <span>The good place</span> tuvo un mensaje increíble y transformador sobre lo que significa estar aquí en la tierra.(traducido del inglés)</q>
 			<a href="https://www.insider.com/the-good-place-finale-series-changed-my-life-2020-1">Insider (en inglés)</a>
 		</section>
 		<section>
