--- a/Personajes.html
+++ b/Personajes.html
@@ -24,7 +24,7 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li class="current">Personajes</li>
 			<li><a href="Media.html">Media</a></li>
-			<li><a href="Backstage.html">Detrás de escena</a>
+			<li><a href="Backstage.html">Detrás de escena&#9662</a>
 				<ul  class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
 					<li><a href="Reviews.html">Recepción</a></li>
