--- a/Media.html
+++ b/Media.html
@@ -25,7 +25,7 @@
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li class="current">Media</li>
-			<li><a href="Backstage.html">Detrás de escena</a>
+			<li><a href="Backstage.html">Detrás de escena&#9662</a>
 				<ul class="dropdown">
 					<li><a href="Backstage.html">Equipo</a></li>
 					<li><a href="Reviews.html">Recepción</a></li>
