--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         </a>
 	</div>
 	<nav>
-		<ul>
+		<ul class="navigator">
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
@@ -31,6 +31,11 @@
 			</li>
 			<li><a href="About.html">Contacto</a></li>
 		</ul>
+		<div class="hamburguesa">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</nav>
 </header>
 
@@ -68,6 +73,6 @@
 	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
-
+<script src="hamburger.js"></script>
 </body>
 </html>
