--- a/Index.html
+++ b/Index.html
@@ -45,7 +45,7 @@
 
 	
 	<article class="redireccion_pages">
-		<h2>Descubre más sobre la serie</h2>
+		<h2>Descubre más sobre la serie!</h2>
 		<section>
 			<div>
 				<a href="Personajes.html"> 
@@ -73,6 +73,6 @@
 	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
-<script src="hamburger.js"></script>
+<script src="js/hamburger.js"></script>
 </body>
 </html>
