--- a/Backstage.html
+++ b/Backstage.html
@@ -20,7 +20,7 @@
         </a>
 	</div>
 	<nav>
-		<ul>
+		<ul class="navigator">
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
@@ -32,6 +32,11 @@
 			</li>
 			<li><a href="About.html">Contacto</a></li>
 		</ul>
+		<div class="hamburguesa">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</nav>
 </header>
 
@@ -52,5 +57,6 @@
 	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
+<script src="js/hamburger.js"></script>
 </body>
 </html>
