--- a/Media.html
+++ b/Media.html
@@ -21,7 +21,7 @@
         </a>
 	</div>
 	<nav>
-		<ul>
+		<ul class="navigator">
 			<li><a href="Serie.html">Acerca de la serie</a></li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li class="current">Media</li>
@@ -33,6 +33,11 @@
 			</li>
 			<li><a href="About.html">Contacto</a></li>
 		</ul>
+		<div class="hamburguesa">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</nav>
 </header>
 
@@ -79,5 +84,6 @@
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
 <script src="js/lightbox-plus-jquery.min.js"></script>
+<script src="js/hamburger.js"></script>
 </body>
 </html>
