--- a/Serie.html
+++ b/Serie.html
@@ -18,7 +18,7 @@
         </a>
 	</div>
 	<nav>
-		<ul>
+		<ul class="navigator">
 			<li class="current">Acerca de la serie</li>
 			<li><a href="Personajes.html">Personajes</a></li>
 			<li><a href="Media.html">Media</a></li>
@@ -30,6 +30,11 @@
 			</li>
 			<li><a href="About.html">Contacto</a></li>
 		</ul>
+		<div class="hamburguesa">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</nav>
 </header>
 
@@ -44,5 +49,6 @@
 	<p>Legal</p>
 	<a href="https://www.netflix.com/ar/title/80113701">Ver ahora</a>
 </footer>
+<script src="js/hamburger.js"></script>
 </body>
 </html>
